[metadata]
name = libhueble
version = 1.0.0
author = Alexander Horn
author_email = alexhorn@users.noreply.github.com
description = A library for controlling Philips Hue lights via Bluetooth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexhorn/libhueble
project_urls =
    Bug Tracker = https://github.com/alexhorn/libhueble/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Home Automation
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows 10

[options]
package_dir =
    libhueble = src
packages =
    libhueble
python_requires = >=3.6
install_requires =
    bleak>=0.11.0
    rgbxy@git+https://github.com/benknight/hue-python-rgb-converter.git@f73a4ec
